deploy/jenkins/opengauss-cn4-jenkins-master/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-jenkins
  namespace: jenkins
  labels:
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-master"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      "app.kubernetes.io/component": "jenkins-master"
      "app.kubernetes.io/instance": "jenkins"
  template:
    metadata:
      labels:
        "app.kubernetes.io/instance": "jenkins"
        "app.kubernetes.io/component": "jenkins-master"
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "opengauss-jenkins"
      containers:
      - name: jenkins
        image: swr.cn-north-4.myhuaweicloud.com/openeuler/jenkins:2.361.4-lts-jdk11
        imagePullPolicy: "Always"
        args: ["--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)", "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: slavelistener
        livenessProbe:
          httpGet:
            path: "/login"
            port: http
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: "/login"
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            cpu: 10000m
            memory: 15000Mi
          requests:
            cpu: 10000m
            memory: 10000Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/jenkins_home
          name: jenkins-home
          readOnly: false
        - mountPath: /usr/share/jenkins/ref/secrets/
          name: secrets-dir
          readOnly: false
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
          readOnly: false
      volumes:
      - name: plugins
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: secrets-dir
        emptyDir: {}
      - name: plugin-dir
        emptyDir: {}
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-data-vol
