deploy/jenkins/opengauss-cn4-jenkins-master/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
          - --provider=oidc
          - --email-domain=*
          - --upstream=http://opengauss-jenkins.jenkins.svc.cluster.local
          - --http-address=0.0.0.0:4180
          - --cookie-expire=12h0m0s
          - --provider-display-name=authing
          - --skip-auth-regex=^/job/
          - --skip-auth-regex=^/queue/
          - --skip-auth-regex=^/view/
          - --skip-auth-regex=^/static/
          - --skip-auth-regex=^/adjuncts/
          - --skip-auth-regex=^/images/
          - --skip-auth-regex=^/blue/
          - --skip-auth-regex=^/computer/
          - --skip-auth-regex=^/gitee-project/
          - --insecure-oidc-allow-unverified-email=true
          - --redirect-url=https://opengaussjenkins.osinfra.cn/oauth2/callback
          - --oidc-issuer-url=https://opengaussjenkins.authing.cn/oidc
          - --session-cookie-minimal=false
          - --pass-access-token=true
          - --cookie-secure=false
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:fa4e986305fedfcf61c4e094bce786699ba0ad1d
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
          - containerPort: 4180
            protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: jenkins
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
  type: ClusterIP
