deploy/jenkins/opengauss-cn4-jenkins-master/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-jenkins
  namespace: jenkins
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-1.7.4"
    "app.kubernetes.io/managed-by": "Tiller"
    "app.kubernetes.io/instance": "jenkins"
    "app.kubernetes.io/component": "jenkins-master"
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - port: 50000
      name: agent
      nodePort: 32538
      targetPort: 50000
  selector:
    "app.kubernetes.io/component": "jenkins-master"
    "app.kubernetes.io/instance": "jenkins"
  type: NodePort
