deploy/jenkins/opengauss-cn4-jenkins-master/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "SAMEORIGIN";
      location ~* /script$ {
       return 403;
      }
      location ~* injectedEnvVars/$ {
       return 403;
      }
      location ~* /ws/ {
       return 403;
      }
  name: opengauss-jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: opengaussjenkins.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
    - hosts:
      - opengaussjenkins.osinfra.cn
      secretName: opengauss-jenkins-tls
  ingressClassName: nginx
